# gp4-lego-assembly

./: CMakeLists.txt  README.md  gp4_lego_config.yaml  package.xml
config/: env_setup.json  env_setup_A.json  env_setup_D.json  env_setup_general.json  env_setup_mfi.json  env_setup_sim.json  env_setup_simple.json  env_setup_vday.json  user_config.json  user_config_A.json  user_config_D.json  user_config_integrate.json  user_config_sim.json
config/assembly_tasks/: AI.json  RI.json  chair.json  heart.json  human.json  mfi.json  pyramid.json  task.json  vday.json  wtts.json  wtts_1.json  wtts_A.json  wtts_D.json  wtts_disassemble.json
config/robot_properties/: gp4_DH.txt  gp4_oliver_tool_DH.txt  gp4_oliver_tool_assemble_DH.txt  gp4_oliver_tool_disassemble_DH.txt  gp4_tool_DH.txt  gp4_tool_assemble_DH.txt  gp4_tool_disassemble_DH.txt
include/: Lego.hpp  Robot.hpp
include/Utils/: Common.hpp  FileIO.hpp  Math.hpp
launch/: controller_node.launch  integrate_task_planning_node.launch  sim_node.launch  task_planning_cartesian_node.launch  task_planning_cartesian_sim_node.launch
record_tasks/: chair.txt  human.txt  pyramid.txt
simulation/launch/: control.yaml  controller_node.launch  gp4_gazebo.launch  gp4_rviz.launch  lego_setup.launch
simulation/urdf/: common_colors.xacro  common_materials.xacro  gp4.xacro  lego_1x2.xacro  lego_1x4.xacro  lego_1x6.xacro  lego_1x8.xacro  lego_2x2.xacro  lego_2x4.xacro  lego_2x6.xacro  lego_2x8.xacro  lego_baseplate.xacro
src/: Lego.cpp  Robot.cpp
src/Utils/: FileIO.cpp  Math.cpp
src/ros_nodes/: controller_node.cpp  lego_integrate_task_planning.cpp  lego_sim.cpp  lego_task_planning_cartesian_node.cpp  lego_task_planning_cartesian_sim_node.cpp  service_sample_node.cpp
srv/: MakeMove.srv
